# llama2rag

./: .gitignore  .pre-commit-config.yaml  README.md  llama_caller.ipynb  pyproject.toml  utils.py
.streamlit/: secrets.toml
app/: app_utils.py  main.py
notebooks/: 1.GettingStarted.ipynb  2.MultiTurnConversations.ipynb  3.PromptEngineering.ipynb  4.ModelSelection.ipynb  5.CodeLlama.ipynb
