[tool.poetry]
name = "streamlit-schools"
version = "0.1.0"
description = "template venv for template repo"
authors = ["b-justin <justin.beresford@deliveroo.co.uk>"]
readme = "README.md"
packages = [{include = "streamlit_schools"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
llama2 = "^0.0.1.dev0"
utils = "^1.0.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
